2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: Module 'imap4' activated.

2010-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* New module 'pt', for ParserTools. Requires Tcl 8.5. Supercedes
	  grammar_peg, grammar_me, and page.

2009-12-08  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/test/run.tcl (CaptureFailureCollectBody,
	  CaptureFailureCollectError): Fixed issue with test result
	  capture on failure. We failed on the capture of failure due to
	  unexpected return codes, because the output syntax is different
	  for that compared to failure due to result differences. Code has
	  been added to recognize and capture this other syntax.

	* support/devel/sak/test/run.tcl: Extended the test framework to
	* support/devel/all.tcl: record time per .test file, count of
	  tests per file, enabling it to compute a speed (microseconds per
	  test), as a rough and crude benchmark of where we may have
	  performance problems with either packages or tests.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-12-03  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/readme/readme.tcl: Strip trailing whitespace
	  from the table formatted parts of the generated readme.

2009-12-01  Andreas Kupries  <andreask@activestate.com>

	* New modules 'virtchannel_{core,base,transform}' with packages
	  providing core services to reflected channels and
	  transformations, and basic reflected channels, and
	  transforms. This is in essence the example code for the paper I
	  presented at Tcl'2009 in Portland (Reflected and Transformed
	  Channels).

	* support/installation/modules.tcl: New modules 'virtchannel_*'.

2009-11-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* New package 'json::write' in existing module 'json'.
