@@ -1,0 +1,90 @@
+# -*- tcl -*-
+# gpx.test:  tests for the gpx package.
+#
+# Copyright (c) 2010 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
+# All rights reserved.
+#
+# RCS: @(#) $Id: gpx.test,v 1.1 2010/07/08 22:53:13 andreas_kupries Exp $
+
+# -------------------------------------------------------------------------
+
+source [file join \
+	[file dirname [file dirname [file join [pwd] [info script]]]] \
+	devtools testutilities.tcl]
+
+testsNeedTcl     8.5
+testsNeedTcltest 2.0
+
+if {[catch {
+    package require tdom
+}]} {
+    puts "    Aborting the tests found in \"[file tail [info script]]\""
+    puts "    Required package tdom not found."
+    return
+}
+testsNeed tdom 0.8
+
+testing {
+    useLocal gpx.tcl gpx
+}
+
+# -------------------------------------------------------------------------
+
+set rawXML {<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<gpx xmlns="http://www.topografix.com/GPX/1/1" xmlns:gpxx="http://www.garmin.com/xmlschemas/GpxExtensions/v3" xmlns:gpxtpx="http://www.garmin.com/xmlschemas/TrackPointExtension/v1" creator="Oregon 400t" version="1.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.topografix.com/GPX/1/1 http://www.topografix.com/GPX/1/1/gpx.xsd http://www.garmin.com/xmlschemas/GpxExtensions/v3 http://www.garmin.com/xmlschemas/GpxExtensionsv3.xsd http://www.garmin.com/xmlschemas/TrackPointExtension/v1 http://www.garmin.com/xmlschemas/TrackPointExtensionv1.xsd">
+  <metadata>
+    <link href="http://www.garmin.com">
+      <text>Garmin International</text>
+    </link>
+    <time>2009-10-17T22:58:43Z</time>
+  </metadata>
+  <trk>
+    <name>Example GPX Document</name>
+    <trkseg>
+      <trkpt lat="47.644548" lon="-122.326897">
+        <ele>4.46</ele>
+        <time>2009-10-17T18:37:26Z</time>
+      </trkpt>
+      <trkpt lat="47.644548" lon="-122.326897">
+        <ele>4.94</ele>
+        <time>2009-10-17T18:37:31Z</time>
+      </trkpt>
+      <trkpt lat="47.644548" lon="-122.326897">
+        <ele>6.87</ele>
+        <time>2009-10-17T18:37:34Z</time>
+      </trkpt>
+    </trkseg>
+  </trk>
+</gpx>
+}
+
+set track [tcltest::makeFile $rawXML testtrack.gpx]
+
+# -------------------------------------------------------------------------
+
+test gpx-1.0 {create error} -body {
+    gpx::Create
+} -returnCodes error \
+    -result {wrong # args: should be "gpx::Create gpxFilename ?rawXML?"}
+
+test gpx-1.1 {create error} -body {
+    gpx::Create F XML X
+} -returnCodes error \
+    -result {wrong # args: should be "gpx::Create gpxFilename ?rawXML?"}
+
+test gpx-2.0 {create & destroy} -body {
+    gpx::Cleanup [gpx::Create $track]
+} -result {}
+
+test gpx-2.1 {create & destroy} -body {
+    gpx::Cleanup [gpx::Create {} $rawXML]
+} -result {}
+
+#----------------------------------------------------------------------
+
+tcltest::removeFile $track
+unset rawXML track
+
+#----------------------------------------------------------------------
+testsuiteCleanup
+return
